2009-11-25  Jonathan Pryor <jpryor@novell.com>

	* Makefile: When copying mdoc-net.exe into ./mdoc-net, rename it to
	  mdoc.exe so that .NET users continue to use the name 'mdoc'.  This
	  will make documentation easier, etc.

2009-11-25  Jonathan Pryor <jpryor@novell.com>

	+ Giving up on getting mdoc to fully work under .NET; specifically,
	  mdoc-export-html makes use of many Mono XSLT "extensions" (part of
	  XSLT 2.0, apparently) which .NET doesn't support.  To run mdoc under
	  .NET, use mdoc-net.exe, which is a "static" mdoc.exe, including the 
	  sources for BOTH monodoc.dll AND Mono's System.Xml.dll in the binary.
	  Yes, this makes it huge.

	* . (svn:ignore): Ignore generated files.
	* Makefile: If the NET variable is present (e.g. 'make NET=1'),
	  generate mdoc-net.exe instead of mdoc.exe, otherwise generate
	  mdoc.exe (the default, with normal dependencies).  When NET is
	  present, also create a 'mdoc-net' directory which contains
	  mdoc-net.exe and all assembly dependencies (to make it easier to
	  grab all the deps at once).
	* mdoc-net.exe.sources: Added; sources to use for mdoc-net.exe.
	* Mono.Documentation/monodocs2html.cs: Ensure that the "Index" XSLT
	  variable is set before generating output.

2009-11-24  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Use XslCompiledTransform, as
	  it's *significantly* faster under .NET than XslTransform -- 
	  1.7s vs ~3 minutes 7s (for a trivial test case).

2009-11-23  Jonathan Pryor <jpryor@novell.com>

	* Resources/overview.xsl, Resources/stylesheet.xsl: Remove the 'ext'
	  and 'language' global <xsl:param>'s, as they cause "variable 'foo' 
	  was duplicated within the same scope" errors under .NET.

2009-11-23  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: ".NET support": ensure that we
	  always get Unix line endings so that we can update documentation
	  under both Mono & .NET w/o continually changing the file due to