@@ -15,25 +15,21 @@ MDOC_COMMON_FLAGS = \
 	/r:ICSharpCode.SharpZipLib.dll                                              \
 	/r:$(topdir)/class/lib/net_2_0/Mono.Cecil.dll
 
-ifndef NET
 LOCAL_MCS_FLAGS = $(MDOC_COMMON_FLAGS) \
 	/r:$(topdir)/class/lib/net_2_0/monodoc.dll
 PROGRAM = mdoc.exe
 PROGRAM_DEPS = $(topdir)/class/lib/net_2_0/monodoc.dll
-else
-LOCAL_MCS_FLAGS = $(MDOC_COMMON_FLAGS) \
-	/main:Mono.Documentation.MDoc   \
-	/r:Commons.Xml.Relaxng.dll      \
-	/r:System.Web.Services.dll
-PROGRAM = mdoc-net.exe
+
+ifdef NET
 all : copy-with-deps
 
 copy-with-deps:
 	-mkdir mdoc-net
-	cp $(PROGRAM) mdoc-net/mdoc.exe
+	cp $(PROGRAM) mdoc-net
 	cp $(topdir)/class/lib/net_2_0/Commons.Xml.Relaxng.dll mdoc-net
 	cp $(topdir)/class/lib/net_2_0/ICSharpCode.SharpZipLib.dll mdoc-net
 	cp $(topdir)/class/lib/net_2_0/Mono.Cecil.dll mdoc-net
+	cp $(topdir)/class/lib/net_2_0/monodoc.dll mdoc-net
 endif
 
 MONODOC_RESOURCES = \
