@@ -7,6 +7,8 @@
 <xsl:stylesheet
 	version="1.0"
 	xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+	xmlns:msxsl="urn:schemas-microsoft-com:xslt"
+	exclude-result-prefixes="msxsl"
 	>
 	
 	<xsl:output omit-xml-declaration="yes" />
