@@ -7,6 +7,8 @@
 <xsl:stylesheet
 	version="1.0"
 	xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+	xmlns:msxsl="urn:schemas-microsoft-com:xslt"
+	exclude-result-prefixes="msxsl"
 	>
 	<xsl:include href="mdoc-html-utils.xsl" />
 	<xsl:include href="mdoc-sections-css.xsl" />
@@ -201,21 +203,27 @@
 	<xsl:template name="GetLinkTarget">
 		<xsl:param name="type" />
 		<xsl:param name="cref" />
+		<xsl:param name="xmltarget" select="false()"/>
 		<!-- Search for type in the index.xml file. -->
-		<xsl:variable name="typeentry">
+		<xsl:variable name="typeentry-rtf">
 			<xsl:call-template name="FindTypeInIndex">
 				<xsl:with-param name="type" select="$type" />
 			</xsl:call-template>
 		</xsl:variable>
+		<xsl:variable name="typeentry" select="msxsl:node-set($typeentry-rtf)" />
 
 		<xsl:choose>
-			<xsl:when test="count($typeentry)">
-				<xsl:if test="string-length ($typeentry/@Namespace)">
+			<xsl:when test="$xmltarget and count($typeentry/Type)">
+				<xsl:value-of select="concat($typeentry/Type/@Namespace, '/', $typeentry/Type/@Name, '.xml')" />
+			</xsl:when>
+			<xsl:when test="$xmltarget" />
+			<xsl:when test="count($typeentry/Type)">
+				<xsl:if test="string-length ($typeentry/Type/@Namespace)">
 					<xsl:value-of select="$basepath" />
-					<xsl:value-of select="$typeentry/@Namespace" />
+					<xsl:value-of select="$typeentry/Type/@Namespace" />
 					<xsl:text>/</xsl:text>
 				</xsl:if>
-				<xsl:value-of select="$typeentry/@Name"/>
+				<xsl:value-of select="$typeentry/Type/@Name"/>
 				<xsl:text>.</xsl:text>
 				<xsl:value-of select="$ext" />
 				<xsl:if test="string-length ($cref) > 0 and substring ($cref, 1, 2) != 'T:'">
@@ -235,7 +243,6 @@
 				<xsl:value-of select="$mono-docs" />
 				<xsl:value-of select="$cref" />
 			</xsl:when>
-			<xsl:otherwise>javascript:alert("Documentation not found.")</xsl:otherwise>
 			<!--<xsl:otherwise>javascript:alert("Documentation not found for <xsl:value-of select="$type"/>.")</xsl:otherwise>-->
 		</xsl:choose>
 	</xsl:template>
@@ -243,7 +250,7 @@
 	<xsl:template name="FindTypeInIndex">
 		<xsl:param name="type" />
 
-		<xsl:for-each select="$Index/Types/Namespace/Type">
+		<xsl:for-each select="$Index//Type">
 			<xsl:variable name="nsp">
 				<xsl:choose>
 					<xsl:when test="string-length (parent::Namespace/@Name) = 0" />
